<resources>
    <string name="app_name">Reds - Teach</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="palabras">Palabras</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="error_invalid_email">Este correo no es válido</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="logo_splash_screen">Splash screen image</string>
    <string name="title_activity_login">Login</string>
    <string name="inicio">Inicio</string>

    <string name="palabra">Ingrese la palabra</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar">Agregar</string>
    <string name="nueva">Nueva palabra</string>
    <string name="image_description">image description</string>
    <string name="modificar_palabra">Modificar palabra</string>
    <string name="eliminar_palabra">Eliminar palabra</string>
    <string name="resultados">Resultados</string>
    <string name="compartir">Compartir</string>
    <string name="opciones">Opciones</string>
    <string name="cantidad_de_ejercicios">Cantidad de ejercicios</string>
    <string name="categoria_actual">Categoria actual</string>
    <string name="agregar_categoria">Agregar categoria</string>
    <string name="eliminar_categoria">Eliminar categoria</string>
    <string name="guardar">Guardar</string>
</resources>
